Changed hover style and solved the screen shifting problem with fancybox. Added a body overflow attribute

--- a/app/assets/stylesheets/ChocoChomp.css
+++ b/app/assets/stylesheets/ChocoChomp.css
@@ -11,6 +11,7 @@ body{
 	/*height: 100%;*/
 	height: 100%;
 	background-image: url('Losange_BGblanc.png');
+	overflow: hidden;
 	/*background: -moz-linear-gradient(100% 100% 90deg, #57483b, #7f6f61);
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#7f6f61), to(#57483b)) fixed;*/
 }
@@ -216,17 +217,36 @@ ul.listingSelection li a img{
 
 .thumbnailborder {
 	top:0px;
-	width:206px;
-	height:145px;
+	width:208px;
+	height:147px;
 	position: absolute;
 	float: left;
 	border-style:solid;
-	border-width:2px;
+	border-width:1px;
 	border-color:#999999;
+
+	-webkit-transition-property: border, width, height;
+	-moz-transition-property: border, width, height;
+	-o-transition-property: border, width, height;
+	-ms-transition-property: border, width, height;
+	transition-property: border, width, height;
+	-webkit-transition-duration: 0.1s;
+	-moz-transition-duration: 0.1s;
+	-o-transition-duration: 0.1s;
+	-ms-transition-duration: 0.1s;
+	transition-duration: 0.1s;
+	-webkit-transition-timing-function: linear;
+	-moz-transition-timing-function: linear;
+	-o-transition-timing-function: linear;
+	-ms-transition-timing-function: linear;
+	transition-timing-function: linear;
 }
 
 .thumbnailborder:hover {
-	border-color:rgba(0, 0, 0, 0.5);
+	border-color:rgba(0, 0, 0, 0.4);
+	border-width:4px;
+	width:202px;
+	height:142px;
 }
 
 .mainContainer{
